# k-regret

./: .gitignore  LICENSE  README.md
code/: CMakeLists.txt
code/include/k-regret/brute-force/: regret-solver-2d.h
code/include/k-regret/common/: data-point.h  data-point.hpp  hello-world.h  solution.h  solution.hpp
code/include/k-regret/contour/: geometry.h  geometry.hpp  plane-sweep.h  plane-sweep.hpp  regret-solver-2d.h  regret-solver-2d.hpp
code/src/: CMakeLists.txt  main.cpp
code/src/brute-force/: CMakeLists.txt  regret-solver-2d.cpp
code/src/common/: CMakeLists.txt
code/src/contour/: CMakeLists.txt  plane-sweep.cpp  regret-solver-2d.cpp
code/test/: CMakeLists.txt
code/test/brute-force/: black-box.cpp
code/test/contour/: black-box.cpp  geometry.cpp  plane-sweep.cpp
